--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,20 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "./index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/recipes",
+      "methods": ["GET", "POST", "DELETE"],
+      "dest": "/index.js"
+    },
+    {
+      "src": "/.*",
+      "dest": "/public/index.html"
+    }
+  ]
 }
