--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,12 @@
       "dest": "/index.js"
     },
     {
+      "src": "/",
+      "dest": "/index.js"
+    },
+    {
       "src": "/.*",
-      "dest": "/public/index.html"
+      "dest": "index.js"
     }
   ]
 }
